<resources>
    <string name="app_name">Etowns</string>
    <string name="fin_year">Select Financial Year</string>
    <string name="fin_year_">Financial Year</string>
    <string name="district"> District</string>
    <string name="panchayat">Town Panchayat</string>
    <string name="assno">Tax No</string>
    <string name="submit">Submit</string>
    <string name="paidhistory">Payment History</string>
    <string name="track">Track</string>
    <string name="asstitle"> New Assessment Details</string>
    <string name="appstatus"> Approval Status</string>
    <string name="reqno"> Request No / Mobile No </string>
    <string name="toolbar_property_track_assessment"> Track New Assessment </string>
    <string name="toolbar_water_track_assessment"> Track New Connection </string>
    <string name="add">Add</string>
    <string name="assessmentNumber">Assessment Number</string>
    <string name="add_assessment_title">Please enter Assessment number you wish to Pay</string>
    <string name="doorNum">Door No.</string>
    <string name="wardNum">Ward No.</string>
    <string name="streetName">Street Name</string>
    <string name="toolbar_property">Property Tax </string>
    <string name="toolbar_professiontax"> Profession Tax </string>
    <string name="toolbar_watertax"> Water Tax </string>
    <string name="toolbar_nontax"> Non Tax </string>
    <string name="toolbar_death_details"> Death Details </string>
    <string name="toolbar_birth_details"> Birth Details </string>
    <string name="watertax_searchassessment"> Connection Search </string>
    <string name="property_searchassessment"> Property Search </string>
    <string name="title_activity_home">Etowns</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Murugan</string>
    <string name="nav_header_subtitle">murugan@prematix.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nametransafer">Name Transfer</string>
    <string name="mobileno">Mobile No</string>
    <string name="emailId">Email Id</string>
    <string name="trname">Transfer Name</string>
    <string name="reg_doc">Registration Document</string>
    <string name="upload">Upload</string>
    <string name="choosefile">Choose File</string>
    <string name="name_legel_doc">Name Legal Document</string>
    <string name="death_certificate">Death Certificate </string>
    <string name="property_name_transfer">Name Transfer</string>
    <string name="profession_online_filing">Online Filing</string>
    <string name="financial_year">Financial Year</string>
    <string name="name">Name</string>
    <string name="tax_no">Tax No</string>
    <string name="door_no">Door No</string>
    <string name="wardno">Ward No</string>
    <string name="org_name">Organisation Name</string>
    <string name="save">Save</string>
    <string name="profession_track_online_filing">Track Online Filing</string>
    <string name="track_online_filing">Track Online Filing</string>
    <string name="snack_district_search">Please Choose District</string>
    <string name="snack_panchayat_search">Please Choose Town Panchayat</string>
    <string name="snack_financial_search">Please Choose Financial Year</string>
    <string name="snack_taxno_search">Please Type Tax No</string>
    <string name="water_title_trackassessment">Track New Connection</string>
    <string name="water_title_newconnection">New Connection</string>
    <string name="water_title_searchconnection">Connection Search</string>
    <string name="toolbar_viewconnection">View Connection</string>
    <string name="toolbar_viewdcb">View DCB</string>
    <string name="tracknewassessment_viewtracking_doorno">Door No</string>
    <string name="tracknewassessment_viewtracking_connectionType">Connection Type</string>
    <string name="tracknewassessment_viewtracking_leasename">Lease Name</string>
    <string name="toolbar_property_assessment_search">Assessment Search</string>
    <string name="toolbar_water_assessment_search">Connection Search</string>
    <string name="toolbar_property_payment_history">Payment History</string>
    <string name="Death_apply_death_registration">Apply Death Registration</string>
    <string name="Death_track_death_registration">Track Death Registration</string>
    <string name="Death_death_certificate_search">Death Certificate Search</string>
    <string name="Death_track_abstract">Death Abstract</string>
    <string name="Birth_apply_registration">Apply Birth Registration</string>
    <string name="Birth_abstract">Birth Abstract</string>
    <string name="Birth_track_registration">Track Birth Registration</string>
    <string name="Birth_certificate_search">Birth Certificate Search</string>
    <string name="select_district">Select District</string>
    <string name="select_panchayat">Select Panchayat</string>
    <string name="hosur_office"><u>Hosur Office</u></string>
    <string name="hosur_company_address">51, Step Colony, Dharga, Hosur - 635126 \n Tamilnadu, India.</string>
    <string name="hosur_company_landline">Landline : 04344 270900</string>
    <string name="hosur_company_mobile">Mobile No : 9344 270900</string>
    <string name="hosur_company_email">info@prematix.com</string>
    <string name="blr_company_email">infoblr@prematix.com</string>
    <string name="blr_company_landline">Landline : 080255 22220</string>
    <string name="blr_company_address">No.589, 2nd floor, VP Chambers, \n 1st Cross, 3rd Block, Koramangala, \n Bengaluru - 560034, \n Karnataka, India.</string>
    <string name="blr_office"><u>Bangalore Office</u></string>
    <string name="prematix">Prematix Software Solutions Pvt Ltd</string>
    <string name="toolbar_grievances">Grievances</string>
    <string name="grievances_register">Register Grievances</string>
    <string name="track_grievances">Track Grievances</string>
    <string name="toolbar_calculator">Property Calculator</string>
    <string name="err_msg_district">Select District Name</string>
    <string name="err_msg_panchayat">select Panchayat</string>
    <string name="err_msg_buildingusage">Enter Building Usage</string>
    <string name="err_msg_buildingtype">Enter Building Type</string>
    <string name="err_msg_totalarea">Enter Total Area</string>
    <string name="err_msg_blocation">Enter Building Location</string>
    <string name="New_Assessment">New Assessment</string>
    <string name="tracnewassessment_AssessmentType">AssessmentType</string>
    <string name="assessment_txt_designationname">Designation Name</string>
    <string name="assessment_txt_organisationname">Organisation Name</string>
    <string name="assessment_txt_organisationcode">Organisation Code</string>
    <string name="assessment_txt_trade_name">TradeName</string>
    <string name="assmentsearch">Property Search</string>
    <string name="type">Type</string>
    <string name="trade">Trade</string>
    <string name="organization">Organization</string>
    <string name="tradename">Trade Name</string>
    <string name="designationnname">Designation Name</string>
    <string name="organizationname">Organization name</string>
    <string name="doorno">Door No</string>
    <string name="propertytax_no">Property Tax No.</string>
    <string name="taxname">Tax Name</string>
    <string name="connection_type">Connection Type </string>
    <string name="slabrate">Slab Rate</string>
    <string name="doc_enclosed">Document Enclosed</string>
    <string name="trade_orgletter">Trade / Organization Letter</string>
    <string name="incomedetails">Income Details</string>
    <string name="blno"> Building Licence No</string>
    <string name="property_tax_latest">Property Tax Receipt (Latest) </string>
    <string name="err_msg_finyear">Select FinYear</string>
    <string name="err_msg_mobileNo">Enter MobileNo</string>
    <string name="err_msg_mobileNoLength"> MobileNo Length should be 10 digit</string>
    <string name="err_msg_name">Enter Name</string>
    <string name="err_msg_email">Enter valid Email</string>
    <string name="err_msg_blno">Enter Building Licence No </string>
    <string name="err_msg_bldate">Choose Building Licence Date</string>
    <string name="err_msg_blockNo">Enter Block No</string>
    <string name="err_msg_wardno">Enter Ward No</string>
    <string name="err_msg_streetname">Enter Street Name</string>
    <string name="err_msg_buildingzone">Enter Building Zone</string>
    <string name="err_msg_bAge">Enter Building Age</string>
    <string name="err_msg_taxtype">Enter Tax Type </string>
    <string name="err_msg_slabrate">Enter Slab Rate</string>
    <string name="err_msg_doorno">Enter Door No</string>
    <string name="err_msg_tradlename">Enter Trade Name </string>
    <string name="err_msg_taxno">Enter Property Tax No</string>
    <string name="err_msg_taxname">Enter Tax Name</string>
    <string name="err_msg_connectiontype">select connection type</string>
    <string name="toolbar_new_assessment">New Assessment</string>
    <string name="toolbar_trade_licence">Trade Licence</string>
    <string name="Online_Payment">Online Payment</string>
    <string name="select_referenceno">Select Reference No</string>
    <string name="your_application_status">Your Application Details</string>
    <string name="make_payment_now">Make Payment New</string>
    <string name="search_online_payment">Search For Online Payment</string>
    <string name="check_payment_details_before_payment">Check Your Payment Details Before Payment</string>
    <string name="txt_tradesno">Trades No</string>
    <string name="trade_fee">Trade Fee</string>
    <string name="txt_penalty_amount">Penalty Amount</string>
    <string name="payment_gateway_online">Payment Transactions</string>
    <string name="procedtopay">Proceed To Pay</string>
    <string name="transactioncost">Transaction Cost(RS.)(1.20% Per Transaction)</string>
    <string name="demand_amount">Demand Amount(RS.) </string>
    <string name="gst_tax">GST(RS.)(18.00% of Transaction Cost)</string>
    <string name="bankcharges">Bank Charge(RS.)</string>
    <string name="totalamount_paid">Total Amount To be Paid(RS.)</string>
    <string name="payment_charges_choosebank"> Select Your Payment Option</string>
    <string name="payment_choose_payment_type">Payment Type</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="payment_choose_payment_banks">Payment Banks</string>
    <string name="select_payment_bank">Select Payment Bank</string>
    <string name="transaction_page">Transaction Page</string>
    <string name="year">Year</string>
    <string name="live_birth">Live Birth</string>
    <string name="still_birth">Still Birth</string>
    <string name="total">Total</string>
    <string name="childname">ChildName</string>
    <string name="dob">DOB</string>
    <string name="sex">Sex</string>
    <string name="year_wise">"Year Wise"</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="renewed">Your Licence has been Renewed for the Current and Next Financial Year</string>
    <string name="ok">Ok</string>
    <string name="toolbar_licence_renewal">Licence Renewal</string>
    <string name="or">(or)</string>
    <string name="tax">Tax</string>
    <string name="balance">Balance</string>
    <string name="griev_no">Grievances No</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="financialYear">FinancialYear</string>
    <string name="term">Term</string>
    <string name="all">All</string>
    <string name="clickHereToAdd">Click here to add Assessment</string>
    <string name="chooseAssessment">Select your Assessment</string>
    <string name="proceed">Proceed to Pay</string>
    <string name="delete">Delete</string>
</resources>