<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="2"
            android:background="@color/grey">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_weight="1.7"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/toolbar_licence_renewal"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_report_problem_black"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renewed"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_medium"
            android:padding="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@color/button_color"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/ok"
            android:id="@+id/button_ok"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>