<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/li_parent_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/grievance_track_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/tax"
        app:titleTextAppearance="@style/TextAppearance.TitleFont"
        app:titleTextColor="@color/white" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        android:elevation="@dimen/dimen_5dp"
        app:cardCornerRadius="@dimen/dimen_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_marginEnd="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_grvno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start"
                android:hint="@string/griev_no"
                android:inputType="none"
                android:textAlignment="viewStart"
                android:textSize="@dimen/fragment_body_text_size"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_4dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/or"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_fromdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:hint="@string/from_date"
                    android:inputType="none"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/fragment_body_text_size"
                    android:textStyle="italic" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_todate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="start"
                    android:hint="@string/to_date"
                    android:inputType="none"
                    android:textAlignment="viewStart"
                    android:textSize="@dimen/fragment_body_text_size"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:background="@color/buttonBackgroundColor"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/submit"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fragment_body_text_size"
                    android:textStyle="italic|bold" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
