<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.examp.three.activity.Shared_Modules.Shared_Common_All_Tax.DeleteAssessmentActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spinner_margin_left"
            android:gravity="left"
            android:text="@string/chooseAssessment"
            android:textColor="@color/title_qp_textcolor"
            android:visibility="gone" />

        <ExpandableListView
            android:id="@+id/expandableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonPay"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/heading"
            android:layout_marginTop="@dimen/button_margin_top" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="17dp"
            android:background="@color/colorPrimary"

            android:text="@string/delete"
            android:textColor="@color/white" />


        <ImageView
            android:id="@+id/imageView_nodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:src="@drawable/no_data"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/noAssessmentFound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_nodata"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/textView_margin_top"
            android:text="@string/clickHereToAdd"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@drawable/activate_red"
            android:visibility="invisible" />

    </RelativeLayout>


</LinearLayout>
